--- a/css/about.css
+++ b/css/about.css
@@ -59,6 +59,7 @@ body {
 .about-container {
   text-align: center;
   padding: 60px 20px;
+  padding-bottom: 100px;
   /* margin-top: 40px; */
 }
 
@@ -71,7 +72,6 @@ body {
 }
 h1 {
   font-size: 2.5rem;
-  /* margin: 0; */
 }
 h1 span {
   font-weight: 300;
@@ -79,8 +79,8 @@ h1 span {
 p.role {
   font-size: 2rem;
   color: #494747;
-  /* margin: 10px 0 0; */
 }
+
 .line
 {
   height: 1px;
@@ -88,7 +88,6 @@ p.role {
   width: 90%;
   margin-top: 80px;
   background-color:whitesmoke;
-  /* background: var(--dark-black); */
   margin-left: 4.5rem;
 }
 /* about Section */
@@ -100,7 +99,7 @@ p.role {
   padding: 10rem 8rem;
 }
 .about-info {
-  height: 50vh;
+  /* height: 50vh; */
   max-width: 700px;
   text-align: center;
 }
@@ -116,4 +115,35 @@ p.role {
   width: 90%;
   background-color:whitesmoke;
   margin-left: 4.5rem;
+}
+.Certification h4{
+  text-align: center;
+  font-size: 3rem;
+  opacity: 0.6;
+  font-weight: 300;
+}
+.certificate{
+display: flex;
+justify-content: center;
+padding: 2%;
+gap: 2rem;
+}
+.certificate img{
+   height: 500px;
+  width: 100%;
+}
+.cert-left{
+  width: 45%;
+
+}
+.cert-right h1{
+  font-weight:300;
+  font-size:2rem;
+}
+.cert-right{
+  width: 45%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+   justify-content: center;
 }
