--- a/css/about.css
+++ b/css/about.css
@@ -4,20 +4,20 @@
   box-sizing: border-box;
 }
 body {
-   font-family: "Inter";
+  font-family: "Inter";
   background: #0d0d0d;
   color: #ddd;
   line-height: 1.6;
 }
 .navbar {
   display: flex;
- justify-content: space-around;
-  padding:   3rem 2rem;
+  justify-content: space-around;
+  padding: 3rem 2rem;
 }
 
-.menu-head{
-    display: flex;
-    gap: 1rem;
+.menu-head {
+  display: flex;
+  gap: 1rem;
 }
 .menu-head li {
   list-style: none;
@@ -81,13 +81,12 @@ p.role {
   color: #494747;
 }
 
-.line
-{
+.line {
   height: 1px;
-  opacity:0.3;
+  opacity: 0.3;
   width: 90%;
   margin-top: 80px;
-  background-color:whitesmoke;
+  background-color: whitesmoke;
   margin-left: 4.5rem;
 }
 /* about Section */
@@ -109,41 +108,58 @@ p.role {
   font-size: 1rem;
   color: #cccccc;
 }
-.last-line{
-   height: 1px;
-  opacity:0.3;
+.last-line {
+  height: 1px;
+  opacity: 0.3;
   width: 90%;
-  background-color:whitesmoke;
+  background-color: whitesmoke;
   margin-left: 4.5rem;
 }
-.Certification h4{
+.Certification h4 {
   text-align: center;
   font-size: 3rem;
   opacity: 0.6;
   font-weight: 300;
 }
-.certificate{
-display: flex;
-justify-content: center;
-padding: 2%;
-gap: 2rem;
+.certificate {
+  display: flex;
+  justify-content: center;
+  padding: 2%;
+  gap: 2rem;
 }
-.certificate img{
-   height: 500px;
+.cert-img1, .cert-img2 {
+  height: 500px;
   width: 100%;
+  display: none;
 }
-.cert-left{
-  width: 45%;
 
+.cert-left {
+  width: 45%;
+ 
 }
-.cert-right h1{
-  font-weight:300;
-  font-size:2rem;
+
+.cert-details1, .cert-details2 {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(38, 36, 36);
+   transition: transform 0.6s cubic-bezier(0.83, 0, 0.17, 1);
 }
-.cert-right{
+.cert-details1 h1{
+  font-size: 3rem;
+  font-weight: 400;
+}
+.cert-details2 h1{
+  font-size: 3rem;
+  font-weight: 400;
+}
+.cert-right {
+    background-color: rgb(38, 36, 36);
   width: 45%;
   display: flex;
   align-items: center;
   flex-direction: column;
-   justify-content: center;
+  justify-content: center;
 }
