--- a/css/about.css
+++ b/css/about.css
@@ -163,3 +163,38 @@ p.role {
   flex-direction: column;
   justify-content: center;
 }
+.dotted-Section{
+  text-align: center;
+  padding: 60px 20px;
+  padding-bottom: 100px
+}
+.before-pattern{
+  height:450px;
+  margin-top: 20%;
+  margin-left:50%;
+  /* content: "";
+  position: absolute;
+  top: 50%;
+  width: 70%; */
+  width: 70%;
+  transform: translate(-50%, -50%);
+  background-image: radial-gradient(#444 1px, transparent 1px);
+  background-size: 20px 20px;
+  opacity: 0.9;
+  /* z-index: -1; */
+}
+
+.heading{
+  text-align: center;
+  padding-top:10%;
+}
+.heading h1{
+  font-size: 3rem;
+  font-weight: 400;
+  line-height:55px;
+}
+.after-button{
+  padding: 8px 15px 8px 15px;
+  border-radius: 20px;
+  margin-top: 20px;
+}
