--- a/style.css
+++ b/style.css
@@ -41,6 +41,13 @@ body {
   color: #1DCD9F;
   opacity: 0;
 }
+.heading{
+  text-decoration: none;
+  /* background: #fff; */
+  color:#fff;
+  font-size: 1.5rem;
+  font-family: "Instrument Serif", serif;
+}
 .menu-head{
   display: flex;
   gap: 1rem;
@@ -186,4 +193,77 @@ body {
   font-size: 10px;
   margin-top: 1rem;
   opacity: 0.5;
+}
+/* footer section */
+.footer {
+  background: #0d0d0d;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 30px 8%;
+  color: #aaa;
+  font-family: "inter";
+  margin-top: 60px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* flex-wrap: wrap; */
+  gap: 20px;
+}
+
+/* LEFT LINKS */
+/* .footer-left h1 {
+  color: #aaa;
+  text-decoration: none;
+  /* margin-right: 25px; */
+  /* font-size: 0.95rem;
+  transition: color 0.3s ease;
+} */
+.footer-left p{
+   font-size: 0.9rem;
+  color: #777;
+}
+
+
+.footer-left a:hover {
+  color: #fff;
+}
+
+/* CENTER SOCIAL ICONS */
+.footer-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 23px; /* spacing between icons */
+}
+
+.footer-center a {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-center a img {
+  display: block; /* removes inline gap & weird blue dots */
+  width: 22px;
+  height: 22px;
+  filter: brightness(0) invert(1);
+  opacity: 0.8;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.footer-center a:hover img {
+  opacity: 1;
+  transform: translateY(-2px);
+}
+.footer-center a:focus,
+.footer-center a:active {
+  outline: none;
+  box-shadow: none;
+}
+/* RIGHT COPYRIGHT */
+.footer-right p {
+  font-size: 0.9rem;
+  color: #777;
 }
