--- a/css/work.css
+++ b/css/work.css
@@ -138,11 +138,9 @@ body {
 }
 
 /* project */
-.projects{
+.projects-container{
   display: flex;
-  /* gap:19rem; */
 }
-
 
 /* Card Container */
 .project-card {
@@ -155,6 +153,7 @@ body {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin-left: 70px;
   margin-top: 20px;
+  /* height:50%; */
 
   /* cursor: default; No pointer since it's not clickable */
 }
@@ -220,4 +219,74 @@ body {
   font-size: 0.85rem;
   color: #fff;
   background: transparent;
+}
+
+
+/* footer section */
+.footer {
+  background: #0d0d0d;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 30px 8%;
+  color: #aaa;
+  font-family: "inter";
+  margin-top: 60px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* flex-wrap: wrap; */
+  gap: 20px;
+}
+
+/* LEFT LINKS */
+.footer-left a {
+  color: #aaa;
+  text-decoration: none;
+  margin-right: 25px;
+  font-size: 0.95rem;
+  transition: color 0.3s ease;
+}
+
+.footer-left a:hover {
+  color: #fff;
+}
+
+/* CENTER SOCIAL ICONS */
+.footer-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 23px; /* spacing between icons */
+}
+
+.footer-center a {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-center a img {
+  display: block; /* removes inline gap & weird blue dots */
+  width: 22px;
+  height: 22px;
+  filter: brightness(0) invert(1);
+  opacity: 0.8;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.footer-center a:hover img {
+  opacity: 1;
+  transform: translateY(-2px);
+}
+.footer-center a:focus,
+.footer-center a:active {
+  outline: none;
+  box-shadow: none;
+}
+/* RIGHT COPYRIGHT */
+.footer-right p {
+  font-size: 0.9rem;
+  color: #777;
 }
