--- a/css/about.css
+++ b/css/about.css
@@ -30,6 +30,13 @@ body {
   text-decoration: none;
   color: white;
 }
+.heading{
+  text-decoration: none;
+  /* background: #fff; */
+  color:#fff;
+  font-size: 1.5rem;
+  font-family: "Instrument Serif", serif;
+}
 .btn {
   text-decoration: none;
   padding: 0.6rem 1.2rem;
@@ -72,12 +79,14 @@ body {
 }
 h1 {
   font-size: 2.5rem;
+  line-height: 1.5;
+  font-weight:300;
 }
 h1 span {
   font-weight: 300;
 }
 p.role {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #494747;
 }
 
@@ -97,13 +106,13 @@ p.role {
   padding-bottom: 2rem;
 }
 
-.stack h3 {
+/* .stack h3 {
   padding: 2rem 0;
   font-family: var(--Instrument-Serif);
   font-weight: 500;
   opacity: 0.4;
   color: var(--Black);
-}
+} */
 
 .marquee {
   overflow: hidden;
@@ -114,7 +123,7 @@ p.role {
 .svg-icons {
   display: flex;
   gap: 3rem;
-  animation: scrollLeft 20s linear infinite;
+  animation: scrollLeft 5s linear infinite;
   width: max-content;
 }
 
@@ -159,11 +168,97 @@ p.role {
 }
 .Certification h4 {
   text-align: center;
-  font-size: 3rem;
+  font-size: 3.5rem;
   opacity: 0.6;
   font-weight: 300;
+  padding: 5rem;
 }
-.certificate {
+.projects-container{
+  display: flex;
+  justify-content: center;
+  gap: 10rem;
+}
+
+/* Card Container */
+.project-card {
+  width: 100%;
+  max-width:500px;
+  border: 1px solid #333;
+  border-radius: 24px;
+  overflow: hidden;
+  background-color: #1a1a1a;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  /* margin-left: 70px;
+  margin-top: 20px; */
+  /* height:50%; */
+  /* cursor: default; No pointer since it's not clickable */
+}
+
+.project-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+}
+
+/* Image Section */
+.project-image {
+  position: relative;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.project-image img {
+  display: block;
+  width: 100%;
+  height:300px;
+  object-fit: cover;
+}
+
+.image-fade {
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(rgba(17, 17, 17, 0) 80%, rgba(17, 17, 17, 1) 100%);
+}
+
+/* Details Section */
+.project-details {
+  padding: 20px;
+}
+
+.project-title {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.project-role {
+  font-size: 0.9rem;
+  color: #aaa;
+  margin-top: 4px;
+  margin-bottom: 12px;
+}
+
+.project-description {
+  font-size: 1rem;
+  color: #ddd;
+  margin-bottom: 16px;
+}
+
+/* Tech Stack */
+.tech-stack {
+  display: flex;
+  gap: 10px;
+}
+.tech-stack a{
+  text-decoration: none;
+}
+.tech {
+  border: 1px solid #333;
+  border-radius: 15px;
+  padding: 6px 12px;
+  font-size: 0.85rem;
+  color: #fff;
+  background: transparent;
+}
+/* .certificate {
   display: flex;
   justify-content: center;
   padding: 2%;
@@ -172,7 +267,6 @@ p.role {
 .cert-img1, .cert-img2 {
   height: 500px;
   width: 100%;
-  display: none;
 }
 
 .cert-left {
@@ -204,7 +298,7 @@ p.role {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-}
+} */
 .dotted-Section{
   text-align: center;
   padding: 60px 20px;
@@ -236,9 +330,14 @@ p.role {
   line-height:55px;
 }
 .after-button{
-  padding: 8px 15px 8px 15px;
+  /* padding: 8px 15px 8px 15px; */
+  padding: 7px 7px;
   border-radius: 20px;
   margin-top: 20px;
+}
+.after-button h2{
+  font-size: 1rem;
+  line-height: 20px;
 }
 /* footer section */
 .footer {
@@ -259,18 +358,10 @@ p.role {
 }
 
 /* LEFT LINKS */
-.footer-left a {
-  color: #aaa;
-  text-decoration: none;
-  margin-right: 25px;
-  font-size: 0.95rem;
-  transition: color 0.3s ease;
+.footer-left p{
+   font-size: 0.9rem;
+  color: #777;
 }
-
-.footer-left a:hover {
-  color: #fff;
-}
-
 /* CENTER SOCIAL ICONS */
 .footer-center {
   display: flex;
