--- a/css/work.css
+++ b/css/work.css
@@ -89,7 +89,11 @@ body {
   color: #000;
   font-weight: bold;
 }
-
+@media screen and (min-width: 769px) {
+  .mobile-btn {
+    display: none;
+  }
+}
 .btn.light {
   background: #fff;
   color: #000;
@@ -226,8 +230,6 @@ body {
   color: #fff;
   background: transparent;
 }
-
-
 /* footer section */
 .footer {
   background: #0d0d0d;
@@ -290,3 +292,110 @@ body {
   font-size: 0.9rem;
   color: #777;
 }
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 26px;
+  height: 20px;
+  cursor: pointer;
+  z-index: 10000;
+}
+
+.hamburger span {
+  background: white;
+  height: 2px;
+  width: 100%;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.hamburger.active span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.hamburger.active span:nth-child(2) {
+  opacity: 0;
+}
+.hamburger.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(6px, -6px);
+}
+
+/* Mobile (≤480px) */
+@media (max-width: 480px) {
+ .navbar {
+    justify-content: space-between;
+    padding: 1.2rem 1.5rem;
+  }
+
+  .menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100%;
+    width: 75%;
+    background: #0d0d0d;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: right 0.4s ease;
+    z-index: 999;
+  }
+
+  .menu.active {
+    right: 0;
+  }
+
+  .menu-head {
+    flex-direction: column;
+    gap: 2rem;
+    text-align: center;
+  }
+
+  .nav-right {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+  .mob-reach-out{
+    font-size: 1rem !important;
+  }
+
+  .menu-head li a {
+    font-size: 1.3rem;
+  }
+ .line{
+  margin-left: 10px;
+ }
+ /* .last-line{
+  margin-left: 20px;
+ } */
+
+  .projects-container{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
+    padding-right: 80px;
+    width:90%;
+  }
+  .before-pattern{
+    margin-top: 200px;
+  }
+  .heading h1{
+   margin-top: 100px;
+  }
+  .footer-container {
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+  }
+
+  .footer-left p,
+  .footer-right p {
+    font-size: 0.8rem;
+  }
+} 
