--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
  justify-content: space-around;
   padding:   3rem 2rem;
 }
+
 /* Buttons */
 .btn {
   text-decoration: none;
@@ -211,6 +212,12 @@ body {
   /* flex-wrap: wrap; */
   gap: 20px;
 }
+/* Hide mobile reach-out button on desktop */
+@media screen and (max-width: 1920px) {
+  .mobile-btn {
+    display: none;
+  }
+}
 
 /* LEFT LINKS */
 /* .footer-left h1 {
@@ -266,4 +273,120 @@ body {
 .footer-right p {
   font-size: 0.9rem;
   color: #777;
+}
+.hamburger {
+  display: none;
+  /* flex-direction: column;
+  justify-content: space-between;
+  width: 26px;
+  height: 20px;
+  cursor: pointer;
+  z-index: 10000; */
+}
+
+.hamburger span {
+  background: white;
+  height: 2px;
+  width: 100%;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.hamburger.active span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.hamburger.active span:nth-child(2) {
+  opacity: 0;
+}
+.hamburger.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(6px, -6px);
+}
+
+
+/* Mobile (≤480px) */
+@media (max-width: 480px) {
+  .navbar {
+    justify-content: space-between;
+    padding: 1.2rem 1.5rem;
+  }
+
+  .menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100%;
+    width: 75%;
+    background: #0d0d0d;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: right 0.4s ease;
+    z-index: 999;
+    /* opacity: 0.5; */
+  }
+
+  .menu.active {
+    right: 0;
+  }
+
+  .menu-head {
+    flex-direction: column;
+    gap: 2rem;
+    /* justify-content: center; */
+    text-align: center;
+  }
+
+  .nav-right {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 26px;
+  height: 20px;
+  cursor: pointer;
+  z-index: 10000; 
+  }
+  .mob-reach-out{
+    font-size: 1rem !important;
+  }
+  .menu-head li a {
+    font-size: 1.3rem;
+  }
+
+  .hero h1 {
+    font-size: 2.2rem;
+  }
+
+  .hero p {
+    font-size:0.8rem;
+    /* text-align:center; */
+  }
+  
+  .br{
+    display: none;
+  }
+.mobile-btn {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-container {
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+  }
+
+  .footer-left p,
+  .footer-right p {
+    font-size: 0.8rem;
+  }
 }
