--- a/css/work.css
+++ b/css/work.css
@@ -89,7 +89,7 @@ body {
   color: #000;
   font-weight: bold;
 }
-@media screen and (min-width: 769px) {
+@media screen and (max-width: 1920px) {
   .mobile-btn {
     display: none;
   }
@@ -221,6 +221,9 @@ body {
   display: flex;
   gap: 10px;
 }
+.tech-stack a {
+  text-decoration: none;
+}
 
 .tech {
   border: 1px solid #333;
@@ -327,6 +330,9 @@ body {
     justify-content: space-between;
     padding: 1.2rem 1.5rem;
   }
+    .mob-reach-out {
+    font-size: 0.95rem !important;
+  }
 
   .menu {
     position: fixed;
@@ -352,6 +358,10 @@ body {
     gap: 2rem;
     text-align: center;
   }
+  .mobile-btn {
+    display: flex;
+    justify-content: center;
+  }
 
   .nav-right {
     display: none;
@@ -373,15 +383,21 @@ body {
  /* .last-line{
   margin-left: 20px;
  } */
-
-  .projects-container{
+.projects-container {
     display: flex;
-    flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
-    padding-right: 80px;
-    width:90%;
+    flex-direction: column;   /* cards ek ke neeche */
+    align-items: center;      /* center align horizontally */
+    justify-content: center;
+    gap: 20px;
   }
+  .project-card {
+    width: 100%;               /* responsive width */
+    max-width: 400px;         /* optional: limit max width */
+    margin: 10px 0;
+  }
+
+
+
   .before-pattern{
     margin-top: 200px;
   }
@@ -399,3 +415,21 @@ body {
     font-size: 0.8rem;
   }
 } 
+
+@media (max-width: 380px){
+  .hero h1{
+    font-size: 3.5rem;
+  }
+  .projects-container {
+    display: flex;
+    flex-direction: column;   /* cards ek ke neeche */
+    align-items: center;      /* center align horizontally */
+    justify-content: center;
+    gap: 20px;
+  }
+  .project-card {
+    width: 100%;               /* responsive width */
+    max-width:350px;         /* optional: limit max width */
+    margin: 10px 0;
+  }
+}
