--- a/css/contact.css
+++ b/css/contact.css
@@ -58,7 +58,7 @@ body {
   font-weight: bold;
 }
 /* Hide mobile reach-out button on desktop */
-@media screen and (min-width: 769px) {
+@media screen and (max-width: 1920px) {
   .mobile-btn {
     display: none;
   }
@@ -292,6 +292,10 @@ body {
     justify-content: space-between;
     padding: 1.2rem 1.5rem;
   }
+  .mob-reach-out {
+    font-size: 0.95rem !important;
+  }
+
 
   .menu {
     position: fixed;
@@ -317,6 +321,10 @@ body {
     gap: 2rem;
     text-align: center;
   }
+  .mobile-btn {
+    display: flex;
+    justify-content: center;
+  }
 
   .nav-right {
     display: none;
@@ -335,6 +343,9 @@ body {
  .line{
   margin-left: 20px;
  }
+ .contact{
+  padding: 30px;
+ }
  .contact-in{
   display: flex;
   flex-direction: column;
@@ -343,7 +354,12 @@ body {
  .top h1{
   margin-top: 10px;
  }
- .left,.right{
+ .left{
+  background-image: url("../images/mountain-img.jpg");
+  height: 380px;
+  width: 100%;
+ }
+ .right{
   width: 100%;
  }
  .bt{
@@ -370,3 +386,24 @@ body {
     font-size: 0.8rem;
   }
 } 
+
+@media (max-width: 380px){
+  .hero h1{
+    font-size: 3rem;
+  }
+  .contact{
+    padding: 20px;
+  }
+  .contact-in{
+    width: 100%;
+  }
+   .left{
+  background-image: url("../images/mountain-img.jpg");
+  height: 380px;
+  width: 100%;
+ }
+  .right-info{
+  width: 100%;
+}
+
+}
