--- a/style.css
+++ b/style.css
@@ -373,7 +373,9 @@ body {
   .menu-head li a {
     font-size: 1.3rem;
   }
-
+  .hero{
+    height: 80vh;
+  }
   .hero h1 {
     font-size: 2.2rem;
   }
@@ -417,7 +419,9 @@ body {
     justify-content: space-between;
     padding: 1rem 1.2rem;
   }
-
+  .hero{
+    height: 80vh;
+  }
   .menu {
     position: fixed;
     top: 0;
