--- a/style.css
+++ b/style.css
@@ -374,10 +374,13 @@ body {
     font-size: 1.3rem;
   }
   .hero{
-    height: 80vh;
+    height:70vh;
+
   }
   .hero h1 {
     font-size: 2.2rem;
+    margin-top: 40px;
+
   }
 
   .hero p {
